[gd_scene load_steps=8 format=3 uid="uid://mto2g4xx62r8"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_sdqs0"]
[ext_resource type="Texture2D" uid="uid://cilm8bqq1o2jh" path="res://assets/art/backgrounds/andrew-ridley-jR4Zf-riEjI-unsplash.jpg" id="1_tdday"]
[ext_resource type="AudioStream" uid="uid://dswyd2xgvmqgw" path="res://assets/music/Juhani Junkala [Retro Game Music Pack]/Juhani Junkala [Retro Game Music Pack] Title Screen.wav" id="2_mp5dy"]
[ext_resource type="FontFile" uid="uid://cd7l743mmwp0k" path="res://assets/fonts/VCR_OSD_MONO_1.001.ttf" id="2_xj7t4"]

[sub_resource type="Animation" id="Animation_er7gi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ds7up"]
resource_name = "menu fade in"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vh4st"]
_data = {
"RESET": SubResource("Animation_er7gi"),
"menu fade in": SubResource("Animation_ds7up")
}

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sdqs0")
menu_music = ExtResource("2_mp5dy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_tdday")
expand_mode = 1
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Continue"

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Play"

[node name="LoadButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Load"

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Settings"

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Credits"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xj7t4")
theme_override_font_sizes/font_size = 81
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "menu fade in"
libraries = {
"": SubResource("AnimationLibrary_vh4st")
}

[node name="MusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="SoundsAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_button_entered" binds= ["continue"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_button_entered" binds= ["play"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_button_entered" binds= ["load"]]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
